--- a/ssmtp.conf
+++ b/ssmtp.conf
@@ -3,7 +3,7 @@
 #
 # The person who gets all mail for userids < 1000
 # Make this empty to disable rewriting.
-#root=oleg.sidokhmetov@quersystem.com
+#root=user@domain.com
 
 # The place where the mail goes. The actual machine name is required no 
 # MX records are consulted. Commonly mailhosts are named mail.domain.com
